[tool.poetry]
name = "sunix_ledstrip_controller_client"
version = "2.0.5"
description = "A library for controlling the Sunix RGB / RGBWWCW WiFi LED Strip controller"

license = "AGPLv3+"

authors = [
    "Markus Ressel <mail@markusressel.de>",
]

readme = 'README.rst'

repository = "https://github.com/markusressel/sunix-ledstrip-controller-client"
homepage = "https://github.com/markusressel/sunix-ledstrip-controller-client"

keywords = ['sunix', 'sunix-ledstrip-controller-client']

classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 5 - Production/Stable"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.7"  # Compatible python versions must be declared here

construct = "*"
typing = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
